fix: the name of the script src to match output

--- a/public/صلوات-وليد جلال.html
+++ b/public/صلوات-وليد جلال.html
@@ -393,7 +393,7 @@
 
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
-    <script src="kasheeda-engine.js"></script>
+    <script src="kashida-engine.js"></script>
 
 </body>
 
